--- a/mystyle.css
+++ b/mystyle.css
@@ -36,3 +36,41 @@ h5{
 #buttons{
 	margin-bottom: 15px;
 }
+
+table {
+			width: 90%;
+			margin:10px auto;
+			table-layout:fixed;
+			border-collapse: collapse;
+	}
+
+	td {
+			padding:1em 0 0 0;
+			vertical-align:bottom;
+			background-image:radial-gradient(black 1px, #f1f1f1 0px);
+			background-size: 8px 8px;
+			background-repeat:repeat-x;
+			background-position: left bottom;
+	}
+	
+	td span{
+   	background-color:#f1f1f1;
+	}
+	
+	td:first-child {
+	text-align: left;
+	
+	}
+	
+	td:first-child span{
+	padding-right:.25em;
+	}
+
+  	td:last-child {
+	text-align:right;
+	width:3em;
+  	}
+  	
+  	td:last-child span{
+	padding-left:.25em;
+	}
